# own-ref.rs

./: Cargo.toml  rust-toolchain
src/: _lib.rs  arities.rs  fn_own.rs  lib.rs  own.rs  pin.rs  slot.rs  tests.rs  token.rs  utils.rs
src/own/: impls.rs
src/traits/: any.rs  fn_own.rs  mod.rs
