[package]
name = "own-ref"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0"  # when disabling the `offset_of` feature.
# Still, the _recommended_ Rust version is ≥ 1.79.0

[lib]
path = "src/_lib.rs"

[features]
default = [
    "offset_of",
]
# Performs a sanity check using a `const` assertion.
offset_of = []  # Requires Rust ≥ 1.77.

[dependencies]
extension-traits.version = "1.0.1"
paste.version = "1.0.15"

[dev-dependencies]
macro_rules_attribute.version = "0.1.3"
scopeguard.version = "1.1.0"
